# x64rdbg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: plugin.cpp  pluginconfig.h  pluginconfig.h.in  pluginmain.cpp  pluginmain.h  server.cpp  server.h
src/wrapper/: bridgemain.cpp  bridgemain.h  debug.cpp  debug.h  memory.cpp  memory.h  module.cpp  module.h  register.cpp  register.h  rpc.h  stack.cpp  stack.h
